--- a/package.json
+++ b/package.json
@@ -14,17 +14,12 @@
     "@supabase/supabase-js": "^2.98.0",
     "gsap": "^3.14.2",
     "motion": "^12.34.3",
-    "ogl": "^1.0.11",
-    "postprocessing": "^6.38.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.1",
-    "three": "^0.183.1"
+    "react-router-dom": "^7.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
